--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,13 @@
 *.iml
 .gradle
 /local.properties
+/.idea/caches/
 /.idea/libraries
 /.idea/modules.xml
 /.idea/workspace.xml
+/.idea/gradle.xml
+.idea/codeStyles/
+/.idea/assetWizardSettings.xml
 .DS_Store
 /build
 /captures
