--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,18 @@
 *.iml
+*.apk
 .gradle
-/local.properties
-/.idea/caches/
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/gradle.xml
-.idea/codeStyles/
-/.idea/assetWizardSettings.xml
+gradle
+local.properties
+.idea/
 .DS_Store
-/build
-/captures
+*.orig
+build
+app/build
+app/release*
+debug
+release/
+beta/
+captures
 .externalNativeBuild
+
+keystore.properties
